Fix unstyled font colours from pygments
Bulma defaulted to a dark font, which didn't look good in dark mode

--- a/static/src/scss/_bulma_overrides.scss
+++ b/static/src/scss/_bulma_overrides.scss
@@ -21,3 +21,4 @@ $code-background: none;
 $pre-background: none;
 $code-padding: 0;
 $code: inherit;
+$pre: unset;
